# GlyphExtractor

./: .gitignore  CMakeLists.txt  License.txt  Readme.md
Inc/: BmpReader.h  GlyphExtractor.h
Src/: BmpReader.cpp  GlyphExtractor.cpp  main.cpp
